<resources>
    <string name="app_name">BarBot</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="show_drinks">Getränke anzeigen</string>
    <string name="addDrink">Neues Getränk erstellen</string>
    <string name="show_BarBot">Automat anzeigen</string>
    <string name="addIngredient">Neue Zutat hinzufügen</string>
    <string name="show_ingredients">Zutaten anzeigen</string>
    <string name="drinkFinished">Getränk abgefüllt!</string>
    <string name="drinkFinishedInformation">Ihr Getränk wurde erfolgreich abgefüllt und steht nun für Sie bereit.</string>

    <string name="empty_list">Noch keine Elemente vorhanden</string>
    <string name="getraenke_erstellen_title">Getränke erstellen</string>
    <string name="getraenke_erstellen_button_weitere_zutaten">Weitere Zutat hinzufügen</string>
    <string name="getraenke_erstellen_button_bild">Bild auswählen</string>
    <string name="getraenke_erstellen_textview_getraenkeName">Getränkename</string>
    <string name="getraenke_erstellen_textview_Beschreibung">Beschreibung</string>
    <string name="getraenke_erstellen_textview_Bild">Bildpfad</string>
    <string name="getraenke_erstellen_textview_BestellenButton">Getränk erstellen</string>
    <string name="getraenke_erstellen_ml">ml</string>
    <string name="getraenk_erstellen_success">Das Getränk wurde erfolgreich erstellt</string>
    <string name="ingredient_erstellen_sucess">Die Zutat wurde erfolgreich erstellt</string>
    <string name="drinkDetailTitle">Getränkename</string>
    <string name="drinkDetailDescription">Beschreibung: </string>
    <string name="drinkDetailPlaceholder">Hier kommt die Beschreibung des Getränkes hin....</string>
    <string name="drinkDetailIngr">Zutaten: </string>
    <string name="drinkDetailOrderButton">Getränk Bestellen</string>
    <string name="orderError">Dein Getränk kann nicht bestellt werden, bitte überprüfe deine Slaveunits
    ob der Füllstand zu gering ist oder es zwei Slaveunits mit der gleichen Zutat gibt.</string>
    <string name="orderErrorTitle">Fehler beim bestellen des Getränks</string>

    <string name="createIngredientTitle">Zutat erstellen</string>
    <string name="createIngredientNameOfIngredient">Name der Zutat</string>
    <string name="createIngredientPictureButton">Bild auswählen</string>
    <string name="createIngredientCreateButton">Zutat erstellen</string>

    <string name="ZutatWaehlen">Zutat wählen</string>
    <string name="Slave1">Slave Einheit 1</string>
    <string name="Zutat">Zutat</string>
    <string name="Speichern">Speichern</string>
    <string name="Fuellstand">Füllstand</string>
    <string name="FuellstandInMl">Füllstand in ml</string>
    <string name="NamederSlaveunit">Name der Slave-Einheit</string>
    <string name="slaveunit_erstellen_sucess">Die Slaveunit wurde erfolgreich erstellt</string>
    <string name="slaveunit_updaten_sucess">Die Slaveunit wurde erfolgreich aktualisiert</string>
    <string name="slaveunitIngredient">Zutat: </string>
    <string name="Drink_Statistic">Drink Statistic</string>
    <string name="Ingredient_Statistic">Ingredient Statistic</string>
    <string name="editSlave">Editieren</string>

    <string name="save_changes">Änderungen speichern</string>
    <string name="change_ingredient">Zutaten ändern</string>
    <string name="change_picture">Bild ändern</string>

    <string name="edit">Bearbeiten</string>
    <string name="delete">Löschen</string>

    <string name="ok">OK</string>
    <string name="cancel">Abbrechen</string>

    <string name="action_settings">Settings</string>

    <string name="getraenke_loeschen_message">Dein Getränk wurde erfolgreich gelöscht!</string>
    <string name="getraenke_loeschen_title">Getränk gelöscht</string>

    <string name="theIngredient">Die Zutat wurde erfolgreich gelöscht!</string>

    <string name="changesDone">Die Änderungen wurden ergfolgreich übernommen!</string>


    <string name="test">TEST</string>

    <string name="statistics">Statistik</string>

    <string name="showBluetoothDevices">Bluetooth Geräte</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="error_no_ingredient">Es sind noch keine Zutaten zum zuweisen zu Slaveunits vorhanden, bevor Sie Slaveunits konfigureren können fügen SIe bitte mindestens eine Zuatat hinzu</string>
    <string name="error_no_ingredient_title">Fehler: keine Zutaten vorhanden</string>

</resources>
