<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bar_list"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/show_drinks" />
        <item
            android:id="@+id/add_drink"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/addDrink" />
        <item
            android:id="@+id/show_ingredients"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/show_ingredients" />
        <item
            android:id="@+id/add_ingredient"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/addIngredient" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/show_BarBot" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/test" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
