<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="at.barbot.barbot.EditSlaveFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="178dp"
            android:id="@+id/textView3"
            tools:text="@string/NamederSlaveunit"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_alignTop="@+id/imageView3"
            android:layout_centerHorizontal="true" />

        <ImageView
            app:srcCompat="@color/colorPrimary"
            android:id="@+id/imageView3"
            android:layout_height="150dp"
            android:layout_width="200dp"
            android:layout_marginTop="39dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/Speichern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="34dp"
            android:id="@+id/button2"
            android:layout_marginLeft="420dp"
            android:layout_below="@+id/editText3"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/Zutat"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:id="@+id/textView10"
            android:layout_marginTop="32dp"
            android:layout_height="40dp"
            android:layout_below="@+id/editText2"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/ZutatWaehlen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_below="@+id/textView10"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="@string/Fuellstand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:layout_marginTop="42dp"
            android:layout_below="@+id/button4"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText3"
            android:textAlignment="center"
            android:layout_width="175dp"
            android:hint="@string/FuellstandInMl"
            android:layout_below="@+id/textView11"
            android:layout_centerHorizontal="true" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Slave1"
            android:ems="10"
            android:id="@+id/editText2"
            android:textAlignment="center"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</FrameLayout>
