<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.barbot.barbot.DrinkDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageSwitcher
            android:layout_width="482dp"
            android:layout_marginLeft="107dp"
            android:layout_marginStart="107dp"
            android:layout_marginTop="88dp"
            android:layout_height="272dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/drinkDetailsPicture" />

        <TextView
            android:text="@string/drinkDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/detailDrinkName"
            android:textSize="36sp"
            android:layout_marginLeft="116dp"
            android:layout_marginStart="116dp"
            android:layout_alignTop="@+id/drinkDetailsPicture"
            android:layout_toRightOf="@+id/drinkDetailsPicture"
            android:layout_toEndOf="@+id/drinkDetailsPicture"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:id="@+id/textView5"
            android:text="@string/drinkDetailDescription"
            android:textStyle="normal|bold"
            android:layout_below="@+id/detailDrinkName"
            android:layout_alignLeft="@+id/detailDrinkName"
            android:layout_alignStart="@+id/detailDrinkName"
            android:textSize="18sp" />

        <TextView
            android:text="@string/drinkDetailPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drinkDescription"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/textView5"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:textSize="18sp" />

        <TextView
            android:text="@string/drinkDetailIngr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/drinkDescription"
            android:layout_alignLeft="@+id/drinkDescription"
            android:layout_alignStart="@+id/drinkDescription"
            android:layout_marginTop="28dp"
            android:id="@+id/textView7"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_below="@+id/textView7"
            android:layout_alignLeft="@+id/textView7"
            android:layout_alignStart="@+id/textView7"
            android:layout_marginTop="10dp"
            android:layout_width="400dp"
            android:visibility="visible"
            android:id="@+id/drinkDetail_IngredientsList"
            android:layout_height="350dp"
            android:scrollbars="none|vertical" />

        <Button
            android:text="@string/drinkDetailOrderButton"
            android:layout_width="wrap_content"
            android:id="@+id/drinkDetailOrderButton"
            android:layout_height="55dp"
            android:textSize="18sp"
            android:layout_marginLeft="137dp"
            android:layout_alignBottom="@+id/drinkDetail_IngredientsList"
            android:layout_alignStart="@+id/drinkDetailsPicture"
            android:layout_marginStart="134dp"
            android:layout_marginBottom="38dp" />

        <Button
            android:text="@string/delete"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:id="@+id/drinkDetailDeleteButton"
            android:layout_alignBaseline="@+id/edit_button"
            android:layout_alignBottom="@+id/edit_button"
            android:layout_toStartOf="@+id/drinkDetail_IngredientsList" />

        <Button
            android:text="@string/edit"
            android:layout_height="wrap_content"
            android:id="@+id/edit_button"
            android:textSize="14sp"
            android:layout_width="110dp"
            android:layout_alignTop="@+id/drinkDetailOrderButton"
            android:layout_alignEnd="@+id/drinkDetailsPicture" />

    </RelativeLayout>
</FrameLayout>
