<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.barbot.barbot.CreateSlaveunitFragment"
    android:id="@+id/create_Slaveunit">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/Speichern"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expandableListView"
            android:layout_alignLeft="@+id/expandableListView"
            android:layout_alignStart="@+id/expandableListView"
            android:layout_marginTop="540dp"
            android:id="@+id/button2"
            android:layout_marginLeft="420dp" />

        <TextView
            android:text="@string/Zutat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:textSize="18sp"
            android:layout_alignTop="@+id/expandableListView"
            android:layout_toLeftOf="@+id/expandableListView"
            android:layout_toStartOf="@+id/expandableListView"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="178dp"
            android:id="@+id/textView3"
            tools:text="@string/NamederSlaveunit"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_alignTop="@+id/imageView3"
            android:layout_centerHorizontal="true" />

        <ImageView
            app:srcCompat="@color/colorPrimary"
            android:id="@+id/imageView3"
            android:layout_height="150dp"
            android:layout_width="200dp"
            android:layout_marginTop="39dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <ExpandableListView
            android:layout_height="100dp"
            android:layout_marginTop="98dp"
            android:id="@+id/expandableListView"
            android:layout_width="150dp"
            android:layout_below="@+id/textView3"
            android:layout_alignRight="@+id/imageView3"
            android:layout_alignEnd="@+id/imageView3" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/Slave1"
            android:ems="10"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:id="@+id/editText2"
            android:textAlignment="center" />

        <TextView
            android:text="@string/Fuellstand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView11"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:textAlignment="center"
            android:layout_below="@+id/expandableListView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp" />

        <EditText
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_marginTop="36dp"
            android:id="@+id/editText3"
            android:textAlignment="center"
            android:layout_width="175dp"
            android:hint="@string/FuellstandInMl"
            android:layout_alignTop="@+id/textView11"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>
</FrameLayout>
