<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="191dp"
        android:layout_marginStart="191dp"
        android:layout_marginTop="243dp"
        android:id="@+id/textView3"
        tools:text="@string/Slave1"
        android:textSize="24sp"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        app:srcCompat="@color/colorPrimary"
        android:layout_marginLeft="167dp"
        android:layout_marginStart="167dp"
        android:layout_marginBottom="58dp"
        android:id="@+id/imageView3"
        android:layout_height="150dp"
        android:layout_width="200dp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/Fuellstand"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/textView6"
        android:textSize="18sp"
        android:textAlignment="textStart"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"
        android:layout_alignBottom="@+id/progressBar"
        android:layout_alignRight="@+id/progressBar"
        android:layout_alignEnd="@+id/progressBar"
        android:layout_marginBottom="34dp" />

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_height="20dp"
        android:layout_marginTop="107dp"
        android:id="@+id/progressBar"
        android:layout_width="150dp"
        android:layout_below="@+id/textView10"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:text="@string/Zutat"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:id="@+id/textView10"
        android:textSize="18sp"
        android:contentDescription="@string/Zutat"
        android:layout_marginTop="30dp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

    <Button
        android:id="@+id/editSlaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView6"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="24dp"
        android:text="@string/editSlave" />

</RelativeLayout>