<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.barbot.barbot.CreateDrinkFragment">

    <!-- TODO: Update blank fragment layout -->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="53dp"
            android:id="@+id/textView2"
            android:text="@string/getraenke_erstellen_title"
            android:textSize="36sp"
            android:textStyle="normal|bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextGetraenkeName"
            android:hint="@string/getraenke_erstellen_textview_getraenkeName"
            android:layout_marginRight="89dp"
            android:layout_marginEnd="89dp"
            android:layout_marginTop="127dp"
            android:singleLine="true"
            android:layout_below="@+id/textView2"
            android:layout_toLeftOf="@+id/textView2"
            android:layout_toStartOf="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/textViewGetraenkeName"
            android:text="@string/getraenke_erstellen_textview_getraenkeName"
            android:textSize="18sp"
            android:layout_alignBaseline="@+id/editTextGetraenkeName"
            android:layout_alignBottom="@+id/editTextGetraenkeName"
            android:layout_toLeftOf="@+id/editTextGetraenkeName"
            android:layout_toStartOf="@+id/editTextGetraenkeName" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewBeschreibung"
            android:text="@string/getraenke_erstellen_textview_Beschreibung"
            android:textSize="18sp"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/editTextGetraenkeName"
            android:layout_alignLeft="@+id/textViewGetraenkeName"
            android:layout_alignStart="@+id/textViewGetraenkeName" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextBeschreibung"
            android:hint="@string/getraenke_erstellen_textview_Beschreibung"
            android:singleLine="true"
            android:layout_alignLeft="@+id/editTextGetraenkeName"
            android:layout_alignStart="@+id/editTextGetraenkeName"
            android:layout_above="@+id/editTextPicture"
            android:layout_alignTop="@+id/textViewBeschreibung"
            android:windowSoftInputMode="adjustPan"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/addIngredientAmount"
            android:layout_alignTop="@+id/addIngredientButton"
            android:layout_toRightOf="@+id/addIngredientButton"
            android:layout_toEndOf="@+id/addIngredientButton"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:hint="@string/getraenke_erstellen_ml" />

        <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_toRightOf="@+id/textView2"
            android:layout_above="@+id/addIngredientAmount"
            android:layout_below="@+id/textView2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/drinksIngredients"/>
        </ScrollView>

        <Button
            android:text="@string/getraenke_erstellen_button_weitere_zutaten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="116dp"
            android:id="@+id/addIngredientButton"
            android:layout_marginEnd="130dp"
            android:layout_alignBaseline="@+id/button"
            android:layout_alignBottom="@+id/button"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:text="@string/createIngredientPictureButton"
            android:layout_marginStart="77dp"
            android:layout_marginTop="39dp"
            android:layout_below="@+id/editTextBeschreibung"
            android:layout_alignStart="@+id/textViewBeschreibung" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_camera"
            android:layout_below="@+id/button3"
            android:layout_toEndOf="@+id/textViewBeschreibung"
            android:layout_marginStart="21dp"
            android:layout_marginTop="64dp"
            android:id="@+id/imageView2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:text="@string/getraenke_erstellen_textview_BestellenButton"
            android:onClick="addNewDrink"
            android:layout_marginTop="54dp"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>
</FrameLayout>
