<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.barbot.barbot.CreateIngredientFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="84dp"
            android:id="@+id/textView8"
            android:textSize="36sp"
            android:textStyle="normal|bold"
            android:text="@string/createIngredientTitle" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_below="@+id/textView9"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:id="@+id/editTextZutatName"
            android:hint="@string/createIngredientNameOfIngredient"
            android:textAlignment="center" />

        <TextView
            android:text="@string/createIngredientNameOfIngredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="74dp"
            android:id="@+id/textView9"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true" />

        <Button
            android:text="@string/createIngredientCreateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="69dp"
            android:id="@+id/zutatHinzufügen"
            android:textSize="18sp" />
    </RelativeLayout>
</FrameLayout>
